# ChangeLog for x11-terms/xterm
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.408 2015/03/26 16:45:43 chithanh Exp $

*xterm-315 (26 Mar 2015)

  26 Mar 2015; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xterm-315.ebuild:
  Version bump.

  14 Mar 2015; Markus Meier <maekke@gentoo.org> xterm-314.ebuild:
  arm stable, bug #530652

  06 Mar 2015; Jeroen Roovers <jer@gentoo.org> xterm-314.ebuild:
  Stable for HPPA (bug #530652).

  24 Feb 2015; Agostino Sarubbo <ago@gentoo.org> xterm-314.ebuild:
  Stable for alpha, wrt bug #530652

  23 Feb 2015; Agostino Sarubbo <ago@gentoo.org> xterm-314.ebuild:
  Stable for sparc, wrt bug #530652

  22 Feb 2015; Agostino Sarubbo <ago@gentoo.org> xterm-314.ebuild:
  Stable for ia64, wrt bug #530652

  21 Feb 2015; Agostino Sarubbo <ago@gentoo.org> xterm-314.ebuild:
  Stable for ppc64, wrt bug #530652

  20 Feb 2015; Agostino Sarubbo <ago@gentoo.org> xterm-314.ebuild:
  Stable for ppc, wrt bug #530652

  19 Feb 2015; Agostino Sarubbo <ago@gentoo.org> xterm-314.ebuild:
  Stable for x86, wrt bug #530652

  18 Feb 2015; Agostino Sarubbo <ago@gentoo.org> xterm-314.ebuild:
  Stable for amd64, wrt bug #530652

*xterm-314 (23 Jan 2015)

  23 Jan 2015; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xterm-314.ebuild:
  Version bump.

*xterm-312 (28 Nov 2014)

  28 Nov 2014; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xterm-312.ebuild:
  Version bump, bug #513494.

*xterm-304 (14 May 2014)

  14 May 2014; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xterm-304.ebuild, -xterm-285.ebuild, -xterm-288.ebuild, -xterm-292.ebuild,
  -xterm-293.ebuild:
  Version bump. Drop some old versions.

  15 Nov 2013; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Fix e-mail address.

  08 Oct 2013; Agostino Sarubbo <ago@gentoo.org> xterm-297.ebuild:
  Stable for x86, wrt bug #475480
