@@ -6,29 +6,31 @@ DIST xterm-304.tgz 1159060 SHA256 d3af3934a7d27783005f1025a544d3dfede793b9444dec
 DIST xterm-312.tgz 1186265 SHA256 fad48e1b14e564be1ff06d4a18793a2169037748ff456432f15484383485f36e SHA512 396c17054298dd9e1adcd91fa3841dc4af25bc86fe30e0e0d342e0bcaed248d583004e2a32389c471c5628f4230e9365da30886c5c36181d5fe49bbfe0786227 WHIRLPOOL 00b43731205384e5353b00b77e023553e965408c8c685fb2b944307b67508327fffc77cbbfd8ee9748efae8277fa0e7add5987ccc86102e86653d17ade6390b3
 DIST xterm-314.tgz 1200426 SHA256 1dbf1e93796c1b71b22b84e82eb58bcf20a14a7f365158819f3b4dbb29fe93f0 SHA512 bce72207b6db288c3873f00b928797dfd2aaea51d183b11d377af008a1a83965bd781c648fd26d88b491197594315b2d2549cfdb44f0dbd856b269aebc31ad9f WHIRLPOOL a9eda394dc47d0d31ab27fe338e3a1d41ef581b1617d324fdb98289374e9d5e4854735ddc4a862323203ec1ecb2788f3ae7e4abe1f3b17b15dadecc6edb9f651
 DIST xterm-315.tgz 1206477 SHA256 fee60049291a19357aa1022d6860a341c2750728ddac88520f01dc0fcd787d02 SHA512 ac634824213001d7ac7fcd11408d9d2956b512095136162d855aa474083f3a801a7830881c9acedd2eae751928e8803170bd243e9083dac74e3ec815dfaa5996 WHIRLPOOL eadc97982d44ce5b9d4231b417f789a13c2c795f59dc2c39b93f20920e0cbdcc3bde19acdbaf3e7864a9ad8d6a11e49f93523e9d3df9640e6a8e46ce77af0454
+DIST xterm-317.tgz 1208960 SHA256 d2e5b0dbe47568f9e76123a4f0aeaafd586a4ce0c1beb63a476b07cd718e356d SHA512 43c92db70f22619cd09b6597f9c697ebf406a838388fcf10f8e34327e0e358c88c1853a0c375a0969e2f65c0689078fe4e7ca2f8f1eabd9ca89d7d32898eed55 WHIRLPOOL 1c9f30c8ecf27ec2227a87754d392cf8c5d9b3b0a55f28e9445c744f7892ed3dcec21b85ee995f3b90b7da6a3b53f9a998d6353f21641cff90657fc9b5d2d7d5
 EBUILD xterm-297.ebuild 2649 SHA256 dcecc6283a6e310e97c72f9aeb17517f0a13bf17993815794907c9fbf89a3dd4 SHA512 e4380aceff8fc61f0d8e04f1e740404c4194af40f95336fe76453a35799462fd0de89681f7e906d7ff1c7b358adb42196b0bfc260f53b32c456f84a38ee97de6 WHIRLPOOL bef13b5f1c072698616bf5efc41b2c156a2b92d54d014a87afc7cb177a80f5835dd17dcb3f8994aec32d69d5db663028148e2458de298067ff7696af4158d744
 EBUILD xterm-304.ebuild 2662 SHA256 993672862f5aa8e90900cd9ce57a0012b2681f6cbb5e5edefb08a5de6b6eb24e SHA512 b90e8088dfb0fe22a0f28cabea494a2f3b8e3390ddb3929b6edbefd7a00090c05e62da428001af37e1053bd508f78e7e6fda8fc4b059feea3d753f0467709ed7 WHIRLPOOL ccf73389b0d3f0a2b6870c66502ad0414fc0ef7ebdfbbbe867f1838b4085d92265483c383d7e4fd57fe6a075a6f86ecbd7cae1fb1bce6c5d618088991a16ea66
 EBUILD xterm-312.ebuild 2662 SHA256 8f9587874048e94d1b90e2481c9386fa0baa09da7c0f41fa13717561ab09e9a5 SHA512 dccc52fd7747d6f064772c88366b42a4b20c1292301019a645f7a33a4e0e830db971a01270d213a5dbc91994d8dc3c2242ccabdbe55add7e3915c3227e3990a5 WHIRLPOOL 059647ca4f64a7458aab039b9ec61d85606c2116da315b602376ca439d970f58a9c795ab60b04872635113caabf5f933d160f919f6096e643c8c0193739c7cea
 EBUILD xterm-314.ebuild 2652 SHA256 08df677b1597846c5c6ab8569a1681efbc28634bff6265a07ee2013a28ebea0f SHA512 6990c30781334fe4a8949c8325be270b59196de6331fd4d08685183df52293b7770bf417ce5ccb9f9cf60c082bd4ad79c2d2e1860c3ab4a8cf33b70460efe683 WHIRLPOOL 6741331d1fea887e0d2221f12832b01c51ea0b04b850f8ecac7a91bd9f56256fac13f4f67b1c6d20047df9d8724711bdef4af380f61756e32864b3acbd1ea6f0
 EBUILD xterm-315.ebuild 2662 SHA256 09311c086bc7cfb3e4ba6236f40b987c6343342cca5e0211b510502114b19b7f SHA512 5f9f2ce2314afb6a65e6dcb3099d133b666d022baf47a7faf9bb0a2726b7e82c9d6778469d9e77cef1e851022bf456d524ea6dc0b331d9788c2b3f14d50c6b64 WHIRLPOOL 7768bdc257454c39c88f75f825d174beb91a59dcb4442b2660f5ddb2802475549ab5af018e27e82d1d340504a5e024e0fbee174a39f7dafd8bed1b50cdf67e51
-MISC ChangeLog 51509 SHA256 81caacc9b8e5fda21eb6c25e46d0d23642536a57a0d7d57f62df1c9a397a141e SHA512 9111578959fa0e4af72478a2af502d82df85cf8f877f10fa19bc82126ddf593fb69a09fb2125013ac4878fbe2858c31f76a99162d2e114f0e6809fa66f46848c WHIRLPOOL f1e60952841aeca1e29c29cdffc93aa168817dcbd0c0e5686f0921bd2117f59184c6f2cbc97e6beee6c03780ce7b0eb5039cdb53aaa14572bfa898e476b6f68a
+EBUILD xterm-317.ebuild 2662 SHA256 7646c4ab2c889ff0e06fb271ae145ffac00538ece5c8fc1aa853b087db83a10c SHA512 90ab0cacbd2a3ee55e6b9964fecd50c8542a731ed3208529013b41974ad5c6735a5aba7a0e6e0c527651510405fde58bc198cf04458ce9e03e5e8f8757b4b344 WHIRLPOOL 4b2674f77eac5a38016e162ff0071b25c8538b40474ee574b807258801b4a9c830d8ea0367682b1bfacaed49361bbe0b5f0c6769fe2351516d16dce3f2f612ac
+MISC ChangeLog 51642 SHA256 e2e2f7b5f7c18c76519cd8611413def6b59ab9aaf85954e0235ef76f3f6282dc SHA512 d306df0514db070a75aa5a9b16b4f89b49defa7e4fb37b7041b27a36bb5fa8dbaf410663bea134e7aaf2cd58097117cd565920288294a6b54d2d0d21c64a7c7b WHIRLPOOL df82d6010ec7845f4522f7dad5b33b29ca32edd305143135b63fb092aff6c49b41614b4985d432c9cde2946572388b475a1a0de601408ebefb5f036a07cb63ec
 MISC metadata.xml 464 SHA256 92d68cc1d411eab742a450db017acdcbfe90f6e836a47e098eedd1411c14f19d SHA512 9f09492bd60e4925a2212075b2c102290a01ae93d1568700c3e910110bf8b4f2bb1263244e1ff98dace051cd18eb359fdc28460d97e2d6eaa680f39e4dd26186 WHIRLPOOL 15ce77b3054e439047368c1609bc63e658536b3d6e3159847ed9ac64dce2845422fee14b22a06c1327d06e3c722ca779218fc02d6ea6feba7bee97ec1ef4e5de
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJVFDfdXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVGUJcXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1RDFCODdDQUUxMkUwNkJCNjUyMDMxOEIy
-MzI0RTdCNTY2REYyNjExAAoJECMk57Vm3yYR6s0P/jtXl2el2Zb0Fl2qAyEkxQSD
-xm9xFIjShZscIaYhwylfqJ+/4yD3mdq2BPZdvOaeMaTeziYsIeiSfr5cb90FCWSr
-7PHRl8XKOToZjJZ+pCiFNDs2LDJmPdTzZp3FetPJLLN938+X3qF7JvjIxgxst8VF
-jSyHWvXO/vi9LRjS6wjko3cGvnQJ6+hXMBRI+apS51kRJfpKSW/ddHBlemEwT4IG
-pfIjbd9vym8nQkoWpfHVrzTZBgo60K6asQJ978n+a4owRAPSzfK5iUPfITYNmprF
-ES2QVhUWfiRcJC6t8EnJMw4W8WseN3LhXptZWLGihP+Xoa28h4339YxVYys+ohho
-4EnRv1ZOr/h5/AoU7FjWPvN0xHThfsDQ1rV3brgSKSNDH7QorCDSDW7BL0gEU3Co
-fYh47EtW5DAmteijCuK1oU+giqPX2TXwnAEbG0O4RVX59msfbDjBaJd0Zf0Gm4vG
-db2ucspaRMkVCjNPEDIz/n4eHB43LaY59tEE1n/Yag77LCrFmsdV1gBb4GUFVyJ0
-U9NefmOQZgsoVKt4iTA9dwS0uUrCBKzJ+SlGGdBtoGx7BY/Qh2UQmZjIsDma9g4z
-dYKFoKMiziTyjJYLPMf5tvZDZWCjEmRSdSkHoDXrN/RK/9QJ6uutxoDk/hhpI3gt
-qLxD5D1ZWeKPOgFcWZdV
-=ElR/
+MzI0RTdCNTY2REYyNjExAAoJECMk57Vm3yYRsNgP/jOcXR7umfhCud5nxybh8zk2
+Iqzp0Uy9eDCzdlGAh+XwapbdTcdmWllN3SB/3vdbhgv4b8djWpcL82IHUK5JvbeQ
+Ea5XEsAYmkAjuvACKHUL2EeEhj8yvNyTb1eSI6tcAsrqVVa1JqaK9luWBLyFFe4x
+tTW5TWdtKHfoxXiLJ/46t7bUoT1tzKPzv+TLBzvXjlkZj6K8Cc46ZDn492HAuc6B
+k1H5HsiFIGCywF0/WDJrw2h4tkwxYuPih0SuNLQ6wmNhi7okIHys7TWpWtrCNmER
+hv/Ps1w4Ivuvb7hMq27X4/IxOvNsPTlEhwCEGGCjPAprAgHjk5FKHvEYpT3vTz+n
+12co+yCLajwnAUaYkML0FhrfOrhNCmaNKtpLfVk0uFnazFf8KBQ38nDWco0euIaO
+wNHjr3DAGvCmy3q1H0rkl9U/qwlrUcREI5+KpQ2PM8EAV3mFQ4zXX2c8SrdywV53
+TRb7BJmIauRNNxItW5250BcNM/Pio8o+/pWCJ0LiOMx2kbsRbawiaHiTdfgYaO8d
+ZnESECJf1/IB4puhEjtrMpnKjMISmfPzqOErqA5Diw88r983F9SA7PCjJGJF3jRD
+eOAHuhy6Fog6lyX0wtL0uWXyEpkAh2tYRuRQxEDyn7/pwddOxeDhkNxT3T/OaAf2
+ABnru5odkAeYcjg93/lZ
+=/Bwh
 -----END PGP SIGNATURE-----
